--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -5,7 +5,7 @@
     border: none;
     font-weight: bold;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-base;
     padding:  2.4rem;
     border-bottom: .6rem solid darken($purple,10%);
 }
@@ -28,4 +28,10 @@
     border: none;
     color: $offwhite;
     padding: 0;
-  }
+}
+
+@media(min-width: $desktop-breakpoint){
+    .big-button{
+        margin-bottom: xl-size;
+    }
+}
