--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
     background: $offblack;
     color: white;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-base;
     padding: $m-base 0;
   }
   
@@ -15,4 +15,10 @@
   font-size: $m-base;
   font-weight: 500;
   margin: 0;
+}
+
+@media (min-width: $desktop-breakpoint){
+  .header{
+    margin-bottom: $xl-size;
+  }
 }
